Fixed the CSS to avoid the horizontal scrollbar.
Removed width: 60 em; which set an explicit (and beyond the viewport) width
and set the left and right margin to 50pt. A 5em; margin was rejected because
it grew along with font-resizing.


git-svn-id: file:///home/jurosz/dalsi/padre-svn-git/svn-mirror/trunk/template.padre.perlide.org@7533 18eddd70-d622-4293-bd05-fe65668e8bde

--- a/documentroot/static/static.css
+++ b/documentroot/static/static.css
@@ -54,8 +54,7 @@ div#content {
 
 .center_column {
     text-align: left;
-    width: 60em;
-    margin: 0 auto;     
+    margin: 0 50pt;     
 }
 
 div#column_a { width: 69%;float: left }
